fix: consistent letter spacing

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -17,6 +17,7 @@ html {
  */
 body {
     font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
+    letter-spacing: -0.3px;
     color: $text-color;
     background-color: $background-color;
     -webkit-text-size-adjust: 100%;
