--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,7 +1,5 @@
-.post-content {
+.post-content, .post-preview {
   text-align: justify;
-  font-size: $base-font-size;
-  letter-spacing: -0.3px;
 }
 
 blockquote {
