--- a/css/main.scss
+++ b/css/main.scss
@@ -7,7 +7,7 @@
 
 // Our variables
 $base-font-family: Athelas, Palatino, Georgia, serif;
-$base-font-size:   1.1em;
+$base-font-size:   1.2rem;
 $base-font-weight: 400;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
